media/libcubeb/include/cubeb.h
@@ -4,12 +4,12 @@
  * This program is made available under an ISC-style license.  See the
  * accompanying file LICENSE for details.
  */
-#ifndef   CUBEB_c2f983e9_c96f_e71c_72c3_bbf62992a382
-#define   CUBEB_c2f983e9_c96f_e71c_72c3_bbf62992a382
+#if !defined(CUBEB_c2f983e9_c96f_e71c_72c3_bbf62992a382)
+#define CUBEB_c2f983e9_c96f_e71c_72c3_bbf62992a382
 
 #include <cubeb/cubeb-stdint.h>
 
-#ifdef __cplusplus
+#if defined(__cplusplus)
 extern "C" {
 #endif
 
@@ -226,7 +226,7 @@ int cubeb_stream_stop(cubeb_stream * stream);
     @retval CUBEB_ERROR */
 int cubeb_stream_get_position(cubeb_stream * stream, uint64_t * position);
 
-#ifdef __cplusplus
+#if defined(__cplusplus)
 }
 #endif
 
